Feature/routers (#22)
* Updated the swagger route annotations

* Updated the scripts

* Added swagger step to jenkisn

* Updated to more RESTful route names
