# appcfg/router.go
@@ -22,7 +22,7 @@ func AddHealthRoutes(
 	router.HandleFunc("/healthy", healthctrl.GetHealthyMessage)
 }
 
-// NewSkateparkAPIRouter creates a new mux router for the skatepark api
+// NewSkateparkAPIRouter creates a new mux router for the skateparks api
 func NewSkateparkAPIRouter(
 	router *mux.Router,
 	skatectrl controller.SkateparksAPIController,
@@ -30,12 +30,12 @@ func NewSkateparkAPIRouter(
 	// api subrouter
 	api := router.StrictSlash(true).PathPrefix("/api").Subrouter()
 
-	// swagger:route GET /pets pets users listPets
+	// swagger:route GET /skateparks skateparks listSkateparks
 	//
-	// Lists pets filtered by some parameters.
+	// Lists skateparks filtered by some parameters.
 	//
-	// This will show all available pets by default.
-	// You can get the pets that are out of stock
+	// This will show all available skateparks by default.
+	// You can get the skateparks that are out of stock
 	//
 	//     Consumes:
 	//     - application/json
@@ -54,17 +54,15 @@ func NewSkateparkAPIRouter(
 	//       oauth: read, write
 	//
 	//     Responses:
-	//       default: genericError
-	//       200: someResponse
-	//       422: validationError
-	//api.HandleFunc("/skateparks", skatectrl.GetSkateparks).Methods(http.MethodGet, http.MethodOptions)
+	//       200: stateSkateparkMap
+	api.HandleFunc("/skateparks", skatectrl.GetSkateparksByState).Methods(http.MethodGet, http.MethodOptions)
 
-	// swagger:route GET /pets pets users listPets
+	// swagger:route GET /skateparks skateparks listSkateparks
 	//
-	// Lists pets filtered by some parameters.
+	// Lists skateparks filtered by some parameters.
 	//
-	// This will show all available pets by default.
-	// You can get the pets that are out of stock
+	// This will show all available skateparks by default.
+	// You can get the skateparks that are out of stock
 	//
 	//     Consumes:
 	//     - application/json
@@ -83,17 +81,15 @@ func NewSkateparkAPIRouter(
 	//       oauth: read, write
 	//
 	//     Responses:
-	//       default: genericError
-	//       200: someResponse
-	//       422: validationError
-	api.HandleFunc("/skatepark/states", skatectrl.GetSkateparksByState).Methods(http.MethodGet, http.MethodOptions)
+	//       200: stateSkateparkMap
+	api.HandleFunc("/skateparks/{state}", skatectrl.GetSkateparksByState).Methods(http.MethodGet, http.MethodOptions)
 
-	// swagger:route GET /pets pets users listPets
+	// swagger:route GET /skateparks skateparks listSkateparks
 	//
-	// Lists pets filtered by some parameters.
+	// Lists skateparks filtered by some parameters.
 	//
-	// This will show all available pets by default.
-	// You can get the pets that are out of stock
+	// This will show all available skateparks by default.
+	// You can get the skateparks that are out of stock
 	//
 	//     Consumes:
 	//     - application/json
@@ -112,46 +108,15 @@ func NewSkateparkAPIRouter(
 	//       oauth: read, write
 	//
 	//     Responses:
-	//       default: genericError
-	//       200: someResponse
-	//       422: validationError
-	api.HandleFunc("/skatepark/{state}", skatectrl.GetSkateparksByState).Methods(http.MethodGet, http.MethodOptions)
+	//       200: citySkateparkMap
+	api.HandleFunc("/skateparks/{state}/{city}", skatectrl.GetSkateparksByCity).Methods(http.MethodGet, http.MethodOptions)
 
-	// swagger:route GET /pets pets users listPets
+	// swagger:route GET /skateparks skateparks listSkateparks
 	//
-	// Lists pets filtered by some parameters.
+	// Lists skateparks filtered by some parameters.
 	//
-	// This will show all available pets by default.
-	// You can get the pets that are out of stock
-	//
-	//     Consumes:
-	//     - application/json
-	//     - application/x-protobuf
-	//
-	//     Produces:
-	//     - application/json
-	//     - application/x-protobuf
-	//
-	//     Schemes: http, https, ws, wss
-	//
-	//     Deprecated: true
-	//
-	//     Security:
-	//       api_key:
-	//       oauth: read, write
-	//
-	//     Responses:
-	//       default: genericError
-	//       200: someResponse
-	//       422: validationError
-	api.HandleFunc("/skatepark/{state}/{city}", skatectrl.GetSkateparksByCity).Methods(http.MethodGet, http.MethodOptions)
-
-	// swagger:route GET /pets pets users listPets
-	//
-	// Lists pets filtered by some parameters.
-	//
-	// This will show all available pets by default.
-	// You can get the pets that are out of stock
+	// This will show all available skateparks by default.
+	// You can get the skateparks that are out of stock
 	//
 	//     Consumes:
 	//     - application/json
@@ -170,9 +135,7 @@ func NewSkateparkAPIRouter(
 	//       oauth: read, write
 	//
 	//     Responses:
-	//       default: genericError
-	//       200: someResponse
-	//       422: validationError
-	api.HandleFunc("/skatepark/{state}/{city}/{skatepark}", skatectrl.GetSkateparksByName).Methods(http.MethodGet, http.MethodOptions)
+	//       200: skateparks
+	api.HandleFunc("/skateparks/{state}/{city}/{skateparks}", skatectrl.GetSkateparksByName).Methods(http.MethodGet, http.MethodOptions)
 	return router, nil
 }
